--- a/src/components/card/styles.css
+++ b/src/components/card/styles.css
@@ -1,11 +1,237 @@
 #cards-container {
   display: flex;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   margin: 0 auto;
   padding: 0 0px;
-  justify-content: space-evenly;
 }
 
+/* Using a Layer technique build the card */
+
+/* 
+.preview-card-image {
+  position: absolute;
+  top: 125px;
+  left: calc(10px + 350px);
+  opacity: 100%;
+} 
+*/
+
 /* Please continue your works below */
+
 .preview-card {
+  width: 315px;
+  height: 640px;
+  border-radius: 2.1rem;
+  margin-top: 2px;
+
+  /*  
+  position: absolute;
+  top: 127px;
+  left: 20px;
+  opacity: 50%; 
+  */
+
+  /* Getting A final preview of the product */
+  /* transform: translateX(-425px); */
+}
+
+.product-card-header {
+  height: 52%;
+  position: relative;
+  border-top-left-radius: 2.1rem;
+  border-top-right-radius: 2.1rem;
+  background: linear-gradient(to bottom, #69b2ef 0%, #4476ec 60%, #4151ee 100%);
+}
+
+.product-card-header > .product-image {
+  position: absolute;
+  transform: translate(15px, 95px) scale(0.7) rotate(-90deg);
+}
+
+.product-card-header > .back-button {
+  position: absolute;
+  top: 21px;
+  left: 21px;
+  color: #d5e1ef;
+  transform: scale(0.88);
+}
+
+.product-card-header > .market-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 46px;
+  height: 45px;
+  position: absolute;
+  top: 18px;
+  right: 17px;
+  color: #636670;
+  border-radius: 50%;
+  box-shadow: 3px 3px 9px 1px #000000aa;
+  background-color: #2c3142;
+  transform: scale(0.82);
+}
+
+.product-card-header > .market-button > .market-badge {
+  width: 9.5px;
+  height: 9.5px;
+  position: absolute;
+  top: 12px;
+  right: 9px;
+  background: linear-gradient(to right, #4497dd 0%, #2b7ebf 50%, #1366a1 100%);
+  border-radius: 50%;
+}
+
+.product-card-header > .product-info {
+  display: flex;
+  flex-direction: column;
+  gap: 18.5px;
+  height: 200px;
+  position: absolute;
+  top: 80px;
+  left: 14.5px;
+}
+
+.product-card-header > .product-info > div > .primary {
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 4px;
+  color: #c2e1ef;
+  transform: scaleX(0.86);
+}
+
+.product-card-header > .product-info > div > .secondary {
+  font-size: 11px;
+  font-weight: 500;
+  transform: scaleX(0.88) translate(1px, -7px);
+  color: #89b1ed;
+}
+
+.product-card-footer {
+  display: flex;
+  flex-direction: column;
+  height: 48%;
+  border-bottom-left-radius: 2.1rem;
+  border-bottom-right-radius: 2.1rem;
+  background-color: #262c3d;
+}
+
+.product-card-footer > .product-title {
+  font-size: 28px;
+  font-weight: bold;
+  color: #d5e1ef;
+  margin-top: 34px;
+  padding-left: 14px;
+  transform: scaleX(0.96) scaleY(1.1);
+}
+
+.product-card-footer > .product-subtitle {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 18.5px;
+  color: #b1bcca;
+  margin-top: 21px;
+  padding-left: 16px;
+  transform: scaleX(0.96) scaleY(1.1);
+}
+
+.product-card-footer > .product-features {
+  display: flex;
+  gap: 5px;
+  padding-top: 16px;
+  padding-left: 1px;
+}
+
+.product-card-footer > .product-features > .product-feature-item {
+  display: flex;
+  margin-left: 21px;
+  padding: 5px 0;
+}
+
+.product-card-footer > .product-features > .product-feature-item > .feature-box {
+  width: 36px;
+  height: 36px;
+  border-radius: 7px;
+  background: linear-gradient(to right, #2d3346 0%, #212737 50%, #151c28 100%);
+}
+
+.product-card-footer > .product-features > .product-feature-item > .feature-typography {
+  padding-left: 12px;
+  padding-top: 1px;
+}
+
+.product-card-footer > .product-features > .product-feature-item > .feature-typography > .feature-primary-text {
+  font-size: 12px;
+  font-weight: 800;
+  color: #b1bcca;
+  margin-top: 1px;
+  transform: scaleX(0.92) scaleY(1.1);
+}
+
+.product-card-footer > .product-features > .product-feature-item > .feature-typography > .feature-secondary-text {
+  font-size: 12px;
+  font-weight: 500;
+  color: #a1acba;
+  margin-top: 6px;
+  padding-left: 1.5px;
+  transform: scaleY(1.1);
+}
+
+.product-card-footer > .product-price-container {
+  margin-top: 19px;
+}
+
+.product-card-footer > .product-price-container > .product-price {
+  display: flex;
+  height: 60px;
+  margin: 5px 22.5px 5px 21.5px;
+  border-radius: 10px;
+  border: 1.5px #393e4e solid;
+  background: linear-gradient(to right, #30364a 0%, #202736 50%, #101722 100%);
+}
+
+.product-card-footer > .product-price-container > .product-price > .price {
+  width: 64%;
+  font-size: 30px;
+  font-weight: 500;
+  color: white;
+  padding-top: 15px;
+  padding-left: 1px;
+  transform: scaleX(0.89) translateX(0px);
+}
+
+.product-card-footer > .product-price-container > .product-price > .buy-button {
+  display: flex;
+  align-items: center;
+  width: 32.5%;
+  height: 35.5px;
+  margin-top: 11.5px;
+  border-radius: 5px;
+  background: linear-gradient(to right, #60c2f0 0%, #547af5 50%, #4937fb 100%);
+}
+
+.product-card-footer > .product-price-container > .product-price > .buy-button > p {
+  height: 32px;
+  font-size: 11px;
+  font-weight: 600;
+  color: white;
+  padding-top: 3px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-right: 1px #3849a8 solid;
+  transform: scaleX(0.96) scaleY(1.1);
+}
+
+.product-card-footer > .product-price-container > .product-price > .buy-button > .back-icon {
+  display: flex;
+  justify-content: center;
+  height: 32px;
+  color: white;
+  margin-left: -1px;
+  border-left: 1px #7487f9 solid;
+}
+
+.product-card-footer > .product-price-container > .product-price > .buy-button > .back-icon > svg {
+  transform: scaleX(0.88) rotate(180deg) translate(-4.25px, -3.5px);
 }
